--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,30 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.git
+.idea
+node_modules
+bower_components
+public/temp
+storage/
+errFile.log
+npm-debug.log*
+private/presentations
+.DS_Store
+test-reports.xml
+test/integration/migrations/.migrate
+https
+./docker-compose.yml
+report/
+settings/realms/*.json
+public/settings/
+/test.js
+presentations/
+temp/
+plugins/
+assets/
+app/web/public/dist
+/email-templates/
+tmp
+public/auth/**
